# expo_planner

./: Makefile  README.md  client.http  conftest.py  design.md  pyproject.toml
expoplanner/: dependency.py  main.py  model.py
expoplanner/rest/: attendee.py  conference.py  panel.py  presenter.py  room.py
expoplanner/view/: attendee.py  conference.py  panel.py  presenter.py  registration.py  room.py
templates/: registration.html.j2  wrapper.html.j2
test/view/: test_attendee.py  test_conference.py  test_panel.py  test_presenter.py  test_room.py
